actualizacion de seccion detalles

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="btn">
-        <button id="anterior">Anterior</button>
-        <button id="siguiente" >Siguente</button>
+        <a href="#formulario"><button id="anterior" href="#formulario" >Anterior</button></a>
+        <a href="#formulario"><button id="siguiente"  >Siguente</button></a>
     </div>
     <header>
         <h1>Aplicación de Peliculas</h1>    
@@ -19,7 +19,11 @@
             <input type="submit" class="submit" value="Buscar">
         </form>
     </header>
-    <div id="contenedor"></div>
+    <section id="detalles" >
+    </section>
+    <div id="video" ></div>
+    <div id="contenedor" >
+    </div>
 <script src="./app.js"></script>
 </body>
 </html>
