actualizacion de creditos

--- a/index.html
+++ b/index.html
@@ -9,21 +9,26 @@
 </head>
 <body>
     <div id="btn">
-        <a href="#formulario"><button id="anterior" href="#formulario" >Anterior</button></a>
-        <a href="#formulario"><button id="siguiente"  >Siguente</button></a>
+        <a href="#formulario"><button id="anterior">Anterior</button></a>
+        <a href="#formulario"><button id="siguiente">Siguente</button></a>
     </div>
     <header>
-        <h1>Aplicación de Peliculas</h1>    
+        <h1 class="titulo" >Aplicación de Peliculas</h1>    
         <form id="formulario" >
             <input type="text" name="buscar" id="buscar" placeholder="Busca tu pelicula">
             <input type="submit" class="submit" value="Buscar">
         </form>
     </header>
-    <section id="detalles" >
-    </section>
+    <section id="detalles"></section>
     <div id="video" ></div>
-    <div id="contenedor" >
-    </div>
+    <section id="contenedor"></section>
+    <footer>
+        <p>By Manuel Tovar: </p> <!-- FOOTER PARA LA INFORMACION DEL CREADOR  -->
+        <a href="https://github.com/Manuel-Tovar" target="_blank"> Github </a>
+        <a href="https://www.linkedin.com/in/manuel-tovar-x/" target="_blank" > Linkedin </a>
+        <a href="https://manuel-tovar.github.io/miportafolioweb/" target="_blank" > Portafolio </a>
+        <a href="./creditos/creditos.html" target="_blank" > Creditos </a>
+    </footer>
 <script src="./app.js"></script>
 </body>
 </html>
