documentancion del codigo

--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
     <title>Aplicación de Pelicula</title>
 </head>
 <body>
+    <!-- BOTONES PARA CAMBIO DE PELICULAS -->
     <div id="btn">
         <a href="#formulario"><button id="anterior">Anterior</button></a>
         <a href="#formulario"><button id="siguiente">Siguente</button></a>
     </div>
     <header>
         <h1 class="titulo" >Aplicación de Peliculas</h1>    
-        <form id="formulario" >
+        <form id="formulario" > <!-- FORMULARIO PARA BUSCAR PELICULA -->
             <input type="text" name="buscar" id="buscar" placeholder="Busca tu pelicula">
             <input type="submit" class="submit" value="Buscar">
         </form>
     </header>
-    <section id="detalles"></section>
-    <div id="video" ></div>
-    <section id="contenedor"></section>
+    <section id="detalles"> <!-- SE IMPRIME LOS DETALLES DE LAS PELICULAS --> </section>
+    <div id="video" ><!-- SE IMPRIME LOS VIDEOS DE LAS PELICULAS --></div>
+    <section id="contenedor"><!-- SE IMPRIME LOS POSTER DE LAS PELICULAS --></section>
     <footer>
         <p>By Manuel Tovar: </p> <!-- FOOTER PARA LA INFORMACION DEL CREADOR  -->
         <a href="https://github.com/Manuel-Tovar" target="_blank"> Github </a>
